# stockmarket_cpp

./: CMakeLists.txt  client.cpp  main.cpp
docs/notes/: Spec.md  root.md
